# starlette-x-bugsnag

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: test.yml
starlette_x_bugsnag/: middleware.py
tests/: conftest.py  test_middleware.py
