[tool.poetry]
name = "starlette-x-bugsnag"
version = "0.1.0"
description = "Bugsnag integration for Starlette ASGI framework."
authors = ["Vlad Dmitrievich <me@2tunnels.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
bugsnag = "^3.6.1"
importlib-metadata = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
