[tool.poetry]
name = "starlette-x-bugsnag"
version = "0.1.0"
description = "Bugsnag integration for Starlette ASGI framework."
authors = ["Vlad Dmitrievich <me@2tunnels.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
bugsnag = "^3.6.1"
importlib-metadata = "^1.6.1"
starlette = "^0.13.4"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = "^19.10b0"
mypy = "^0.780"
safety = "^1.9.0"
requests = "^2.23.0"
pytest = "^5.4.3"
pytest-mock = "^3.1.1"
pytest-cov = "^2.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
