[tool.poetry]
name = "starlette-x-bugsnag"
version = "0.1.5"
description = "Shiny Bugsnag integration for Starlette framework"
authors = ["Vlad Dmitrievich <me@2tunnels.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/2tunnels/starlette-x-bugsnag"
keywords = ["starlette", "bugsnag", "asgi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Logging",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.6"
bugsnag = "^3.6.0"
importlib-metadata = "^1.6.0"
starlette = "^0.13.0"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = "^19.10b0"
mypy = "^0.780"
safety = "^1.9.0"
requests = "^2.23.0"
pytest = "^5.4.3"
pytest-mock = "^3.1.1"
pytest-cov = "^2.9.0"
bump2version = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
